@@ -994,8 +994,8 @@ dnl AC_MSG_RESULT($cpp_type)
 
 # checks for header files
 AC_HEADER_STDC
-AC_CHECK_HEADERS(curses.h dlfcn.h fcntl.h grp.h shadow.h langinfo.h \
-libintl.h ncurses.h poll.h pthread.h \
+AC_CHECK_HEADERS(asm/types.h curses.h dlfcn.h fcntl.h grp.h \
+shadow.h langinfo.h libintl.h ncurses.h poll.h pthread.h \
 stropts.h termios.h thread.h \
 unistd.h utime.h \
 sys/audioio.h sys/bsdtty.h sys/file.h sys/loadavg.h sys/lock.h sys/mkdev.h \
@@ -1011,6 +1011,16 @@ AC_HEADER_MAJOR
 AC_CHECK_HEADERS(term.h,,,[
 #ifdef HAVE_CURSES_H
 #include <curses.h>
+#endif
+])
+
+# On Linux, netlink.h requires asm/types.h
+AC_CHECK_HEADERS(linux/netlink.h,,,[
+#ifdef HAVE_ASM_TYPES_H
+#include <asm/types.h>
+#endif
+#ifdef HAVE_SYS_SOCKET_H
+#include <sys/socket.h>
 #endif
 ])
 
